--- a/1klase.html
+++ b/1klase.html
@@ -15,11 +15,11 @@
     <table>
       <tr>
         <th class="hide"></th>
-        <th>Pirmdiena</th>
-        <th>Otrdiena</th>
-        <th>Trešdiena</th>
-        <th>Ceturdiena</th>
-        <th>Piektdiena</th>
+        <th id="r1">Pirmdiena</th>
+        <th id="r2">Otrdiena</th>
+        <th id="r3">Trešdiena</th>
+        <th id="r4">Ceturdiena</th>
+        <th id="r5">Piektdiena</th>
       </tr>
       <tr>
         <td>8:00 - 8:40</td>
