--- a/skola.html
+++ b/skola.html
@@ -8,14 +8,22 @@
   <title>Skolas grafiks</title>
 </head>
 
-<body>
+<body onload="startTime()">
   <div class="container">
+
+    <p id="today"></p>
+    <p id="time"></p>
+
     <h1>Skolas grafiks</h1>
 
     <div class="img">
       <img src="./img/foto.jpg" alt="skola">
     </div>
   </div>
+
+
+
+  <script src="app.js"></script>
 </body>
 
 </html>
