--- a/1klase.html
+++ b/1klase.html
@@ -8,18 +8,24 @@
   <title>1. klase</title>
 </head>
 
-<body>
+<body onload="startTime()">
   <div class="container">
-    <a href="skola.html" class="a-link__sub"><h1>Sākums</h1></a>
+
+    <p id="today"></p>
+    <p id="time"></p>
+
+    <a href="skola.html" class="a-link__sub">
+      <h1 class="home">Sākums</h1>
+    </a>
 
     <table>
       <tr>
         <th class="hide"></th>
-        <th>Pirmdiena</th>
-        <th>Otrdiena</th>
-        <th>Trešdiena</th>
-        <th>Ceturdiena</th>
-        <th>Piektdiena</th>
+        <th id="d1">Pirmdiena</th>
+        <th id="d2">Otrdiena</th>
+        <th id="d3">Trešdiena</th>
+        <th id="d4">Ceturdiena</th>
+        <th id="d5">Piektdiena</th>
       </tr>
       <tr>
         <td>8:00 - 8:40</td>
@@ -85,9 +91,13 @@
         <td></td>
         <td>Sports</td>
       </tr>
-      
+
     </table>
   </div>
+
+
+
+  <script src="app.js"></script>
 </body>
 
 </html>
